--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "selfbot.py",
   "description": "discord selfbot",
   "website": "http://selfbot-py.tk",
-  "repository": "https://github.com/verixx/selfbot.py",
+  "repository": "https://github.com/modernlp123/selfbot.py",
   "env": {
     "TOKEN": {
         "description": "Discord token used to log in",
